# mcp-rg

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  dump_schema.rs  error.rs  main.rs  mcp.rs  ripgrep.rs
tests/: README.md  test_local_mcp.sh  test_mcp.json  test_mcp_docker.sh
